--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -99,10 +99,10 @@
       Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{currentSpeed | number:'1.1-1' }} km/h</ng-container>
       <br>
     </div>
-    <div id = "card2" *ngIf="oldTrack" class="card">
+    <div id = "card2" *ngIf="archivedTrack" class="card">
       ARCHIVED ROUTE
       <br>
-      {{oldTrack.name}}
+      {{archivedTrack.name}}
       <br>
       Distance: {{oldDistance | number:'1.3' }} km
       <br>
